Vite_Kube/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipie-vite
  namespace: aaron-final
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipie-vite
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: recipie-vite
    spec:
      containers:
      - name: recipie-vite
        image: ${DOCKER_USER}/aaron-react:${IMAGE_TAG}
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
